# combu

./: .flake8  .gitignore  README.md  create_badges.py  pyproject.toml
.circleci/: config.yml
examples/: dict_params.py  hook.py  pack_tuple.py  pack_with_class.py  parallel.py  progress.py  simple.py  use_class.py
src/combu/: __init__.py  _combu.py  combu.py  definition.py  execution.py  generator.py  parallel.py  util.py
tests/combu/: test_combu.py  test_execution.py  test_generator.py  test_init.py  test_parallel.py  test_util.py
