[tool.poetry]
name = "combu"
version = "1.2.0"
description = "Execute your method with combination parameters."
authors = ["Takeru Saito <takelushi@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/takelushi/combu"

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.56.0"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
flake8 = "^3.8.4"
cohesion = "^1.0.0"
flake8-blind-except = "^0.1.1"
flake8-bugbear = "^20.11.1"
flake8-class-newline = "^1.6.0"
flake8-commas = "^2.0.0"
flake8-builtins = "^1.5.3"
flake8-coding = "^1.3.2"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
flake8-quotes = "^3.2.0"
flake8-comprehensions = "^3.3.0"
flake8-eradicate = "^1.0.0"
pep8-naming = "^0.11.1"
mypy = "^0.790"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
flake8-html = "^0.4.1"
pybadges = "^2.2.1"
coverage = "^5.3"
isort = "^5.7.0"

[tool.poetry.urls]
issues = "https://github.com/takelushi/combu/issues"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "google"
line_length = "79"
force_single_line = false
known_third_party = ["combu"]
